# tacs

./: CHANGES.md  LICENSE  README.md  client.ml  dune  dune-project  game.ml  hearsay.ml  helpers.ml  moves.ml  rts.ml  tacs-server.opam  tacs-server.opam.locked  tacs.ml  tacs.opam  tacs.opam.locked  tile.ml
.github/workflows/: main.yml
src/: ai.ml  dune  local.ml  multiplayer.ml  solo.ml  tacs.ml
src/client/: client.ml  dune  helpers.ml
src/config/: configure.ml
src/game/: dune  game.ml  moves.ml  tile.ml
src/msg/: dune  msg.ml
src/server/: dune  server.ml
